exports[`EmailConfirm component snapshot renders with error 1`] = `
<main>
  <p>
    Checking your email...
  </p>
  <p>
    <i
      className="fa fa-exclamation-triangle" />
    Token not found
  </p>
</main>
`;

exports[`EmailConfirm component snapshot renders with pending request 1`] = `
<main>
  <p>
    Checking your email...
  </p>
</main>
`;

exports[`EmailConfirm component snapshot renders with success 1`] = `
<main>
  <p>
    Checking your email...
  </p>
  <p>
    Email successfully checked. Redirecting...
  </p>
</main>
`;
